--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
         "bin/brain-games"
     ],
     "license": "MIT",
-    "description": "education"
+    "description": "education",
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.22"
+    }
 }
