--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "autoload": {
         "files": [
             "src/Games/Even.php",
-            "src/Engine.php"
+            "src/Engine.php",
+            "src/Games/Calc.php"
         ],
         "psr-4": {
             "Hexlet\\Code\\": "src/"
