--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
             "src/Engine.php",
             "src/Games/Calc.php",
             "src/Games/Gcd.php",
-            "src/Games/Progression.php"
+            "src/Games/Progression.php",
+            "src/Games/Prime.php"
         ],
         "psr-4": {
             "Hexlet\\Code\\": "src/"
@@ -23,7 +24,8 @@
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-gcd",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
     ],
     "license": "MIT",
     "description": "education",
