--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,7 @@
         }
     ],
     "bin": [
-        "bin/brain-games",
-        "bin/brain-even",
-        "bin/brain-calc",
-        "bin/brain-gcd",
-        "bin/brain-progression",
-        "bin/brain-prime"
+        "bin/brain-games"
     ],
     "license": "MIT",
     "description": "education",
