--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,12 @@
         }
     ],
     "bin": [
-        "bin/brain-games"
+        "bin/brain-games",
+        "bin/brain-even",
+        "bin/brain-calc",
+        "bin/brain-progression",
+        "bin/brain-gcd",
+        "bin/brain-prime"
     ],
     "license": "MIT",
     "description": "education",
